Modula2Java17/src/ch/pitchtech/modula/converter/antlr/m2/m2pim4Parser.java
// Generated from src\ch\pitchtech\modula\converter\antlr\m2\m2pim4.g4 by ANTLR 4.12.0
package ch.pitchtech.modula.converter.antlr.m2;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class m2pim4Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, AND=29, ARRAY=30, BEGIN=31, BY=32, 
		CASE=33, CONST=34, DEFINITION=35, DIV=36, DO=37, ELSE=38, ELSIF=39, END=40, 
		EXIT=41, EXPORT=42, FOR=43, FROM=44, IF=45, IMPLEMENTATION=46, IMPORT=47, 
		IN=48, LOOP=49, MOD=50, MODULE=51, NOT=52, MIN=53, MAX=54, ORD=55, SIZE=56, 
		OF=57, OR=58, POINTER=59, PROCEDURE=60, QUALIFIED=61, RECORD=62, REPEAT=63, 
		RETURN=64, SET=65, THEN=66, TO=67, TYPE=68, UNTIL=69, VAR=70, WHILE=71, 
		WITH=72, IDENT=73, INTEGER=74, SHORTINT=75, LONGINT=76, CARDINAL=77, SHORTCARD=78, 
		LONGCARD=79, REAL=80, LONGREAL=81, STRING=82, DIGIT=83, OCTAL_DIGIT=84, 
		HEX_DIGIT=85, SCALE_FACTOR=86, COMMENT=87, WS=88;
	public static final int
		RULE_ident = 0, RULE_number = 1, RULE_integer = 2, RULE_real = 3, RULE_scaleFactor = 4, 
		RULE_hexDigit = 5, RULE_digit = 6, RULE_octalDigit = 7, RULE_string = 8, 
		RULE_qualident = 9, RULE_constantDeclaration = 10, RULE_constExpression = 11, 
		RULE_relation = 12, RULE_simpleConstExpr = 13, RULE_addOperator = 14, 
		RULE_constTerm = 15, RULE_mulOperator = 16, RULE_constFactor = 17, RULE_setOrQualident = 18, 
		RULE_set_ = 19, RULE_element = 20, RULE_typeDeclaration = 21, RULE_type_ = 22, 
		RULE_simpleType = 23, RULE_enumeration = 24, RULE_identList = 25, RULE_subrangeType = 26, 
		RULE_arrayType = 27, RULE_recordType = 28, RULE_fieldListSequence = 29, 
		RULE_fieldList = 30, RULE_variant = 31, RULE_caseLabelList = 32, RULE_caseLabels = 33, 
		RULE_setType = 34, RULE_pointerType = 35, RULE_procedureType = 36, RULE_formalTypeList = 37, 
		RULE_variableDeclaration = 38, RULE_designator = 39, RULE_designatorTail = 40, 
		RULE_expList = 41, RULE_expression = 42, RULE_simpleExpression = 43, RULE_term = 44, 
		RULE_factor = 45, RULE_setOrDesignatorOrProcCall = 46, RULE_actualParameters = 47, 
		RULE_statement = 48, RULE_assignmentOrProcCall = 49, RULE_statementSequence = 50, 
		RULE_ifStatement = 51, RULE_caseStatement = 52, RULE_ccase = 53, RULE_whileStatement = 54, 
		RULE_repeatStatement = 55, RULE_forStatement = 56, RULE_loopStatement = 57, 
		RULE_withStatement = 58, RULE_procedureDeclaration = 59, RULE_procedureHeading = 60, 
		RULE_block = 61, RULE_declaration = 62, RULE_formalParameters = 63, RULE_fpSection = 64, 
		RULE_formalType = 65, RULE_moduleDeclaration = 66, RULE_priority = 67, 
		RULE_exportList = 68, RULE_importList = 69, RULE_definitionModule = 70, 
		RULE_definition = 71, RULE_programModule = 72, RULE_compilationUnit = 73;
	private static String[] makeRuleNames() {
		return new String[] {
			"ident", "number", "integer", "real", "scaleFactor", "hexDigit", "digit", 
			"octalDigit", "string", "qualident", "constantDeclaration", "constExpression", 
			"relation", "simpleConstExpr", "addOperator", "constTerm", "mulOperator", 
			"constFactor", "setOrQualident", "set_", "element", "typeDeclaration", 
			"type_", "simpleType", "enumeration", "identList", "subrangeType", "arrayType", 
			"recordType", "fieldListSequence", "fieldList", "variant", "caseLabelList", 
			"caseLabels", "setType", "pointerType", "procedureType", "formalTypeList", 
			"variableDeclaration", "designator", "designatorTail", "expList", "expression", 
			"simpleExpression", "term", "factor", "setOrDesignatorOrProcCall", "actualParameters", 
			"statement", "assignmentOrProcCall", "statementSequence", "ifStatement", 
			"caseStatement", "ccase", "whileStatement", "repeatStatement", "forStatement", 
			"loopStatement", "withStatement", "procedureDeclaration", "procedureHeading", 
			"block", "declaration", "formalParameters", "fpSection", "formalType", 
			"moduleDeclaration", "priority", "exportList", "importList", "definitionModule", 
			"definition", "programModule", "compilationUnit"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'='", "'#'", "'<>'", "'<'", "'<='", "'>'", "'>='", "'+'", 
			"'-'", "'*'", "'/'", "'&'", "'('", "')'", "'~'", "'{'", "','", "'}'", 
			"'..'", "'['", "']'", "';'", "':'", "'|'", "'^'", "'ADR('", "':='", "'AND'", 
			"'ARRAY'", "'BEGIN'", "'BY'", "'CASE'", "'CONST'", "'DEFINITION'", "'DIV'", 
			"'DO'", "'ELSE'", "'ELSIF'", "'END'", "'EXIT'", "'EXPORT'", "'FOR'", 
			"'FROM'", "'IF'", "'IMPLEMENTATION'", "'IMPORT'", "'IN'", "'LOOP'", "'MOD'", 
			"'MODULE'", "'NOT'", "'MIN'", "'MAX'", "'ORD'", "'SIZE'", "'OF'", "'OR'", 
			"'POINTER'", "'PROCEDURE'", "'QUALIFIED'", "'RECORD'", "'REPEAT'", "'RETURN'", 
			"'SET'", "'THEN'", "'TO'", "'TYPE'", "'UNTIL'", "'VAR'", "'WHILE'", "'WITH'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "AND", "ARRAY", "BEGIN", "BY", "CASE", 
			"CONST", "DEFINITION", "DIV", "DO", "ELSE", "ELSIF", "END", "EXIT", "EXPORT", 
			"FOR", "FROM", "IF", "IMPLEMENTATION", "IMPORT", "IN", "LOOP", "MOD", 
			"MODULE", "NOT", "MIN", "MAX", "ORD", "SIZE", "OF", "OR", "POINTER", 
			"PROCEDURE", "QUALIFIED", "RECORD", "REPEAT", "RETURN", "SET", "THEN", 
			"TO", "TYPE", "UNTIL", "VAR", "WHILE", "WITH", "IDENT", "INTEGER", "SHORTINT", 
			"LONGINT", "CARDINAL", "SHORTCARD", "LONGCARD", "REAL", "LONGREAL", "STRING", 
			"DIGIT", "OCTAL_DIGIT", "HEX_DIGIT", "SCALE_FACTOR", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "m2pim4.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public m2pim4Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(m2pim4Parser.IDENT, 0); }
		public IdentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ident; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).enterIdent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).exitIdent(this);
		}
	}

	public final IdentContext ident() throws RecognitionException {
		IdentContext _localctx = new IdentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ident);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumberContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(m2pim4Parser.INTEGER, 0); }
		public TerminalNode LONGINT() { return getToken(m2pim4Parser.LONGINT, 0); }
		public TerminalNode SHORTINT() { return getToken(m2pim4Parser.SHORTINT, 0); }
		public TerminalNode CARDINAL() { return getToken(m2pim4Parser.CARDINAL, 0); }
		public TerminalNode SHORTCARD() { return getToken(m2pim4Parser.SHORTCARD, 0); }
		public TerminalNode LONGCARD() { return getToken(m2pim4Parser.LONGCARD, 0); }
		public TerminalNode REAL() { return getToken(m2pim4Parser.REAL, 0); }
		public TerminalNode LONGREAL() { return getToken(m2pim4Parser.LONGREAL, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).exitNumber(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_la = _input.LA(1);
			if ( !(((((_la - 74)) & ~0x3f) == 0 && ((1L << (_la - 74)) & 255L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntegerContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(m2pim4Parser.INTEGER, 0); }
		public TerminalNode LONGINT() { return getToken(m2pim4Parser.LONGINT, 0); }
		public TerminalNode SHORTINT() { return getToken(m2pim4Parser.SHORTINT, 0); }
		public TerminalNode CARDINAL() { return getToken(m2pim4Parser.CARDINAL, 0); }
		public TerminalNode SHORTCARD() { return getToken(m2pim4Parser.SHORTCARD, 0); }
		public TerminalNode LONGCARD() { return getToken(m2pim4Parser.LONGCARD, 0); }
		public IntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).enterInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).exitInteger(this);
		}
	}

	public final IntegerContext integer() throws RecognitionException {
		IntegerContext _localctx = new IntegerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_integer);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			_la = _input.LA(1);
			if ( !(((((_la - 74)) & ~0x3f) == 0 && ((1L << (_la - 74)) & 63L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RealContext extends ParserRuleContext {
		public TerminalNode REAL() { return getToken(m2pim4Parser.REAL, 0); }
		public TerminalNode LONGREAL() { return getToken(m2pim4Parser.LONGREAL, 0); }
		public RealContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_real; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).enterReal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).exitReal(this);
		}
	}

	public final RealContext real() throws RecognitionException {
		RealContext _localctx = new RealContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_real);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_la = _input.LA(1);
			if ( !(_la==REAL || _la==LONGREAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScaleFactorContext extends ParserRuleContext {
		public TerminalNode SCALE_FACTOR() { return getToken(m2pim4Parser.SCALE_FACTOR, 0); }
		public ScaleFactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scaleFactor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).enterScaleFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).exitScaleFactor(this);
		}
	}

	public final ScaleFactorContext scaleFactor() throws RecognitionException {
		ScaleFactorContext _localctx = new ScaleFactorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scaleFactor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(SCALE_FACTOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HexDigitContext extends ParserRuleContext {
		public TerminalNode HEX_DIGIT() { return getToken(m2pim4Parser.HEX_DIGIT, 0); }
		public HexDigitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hexDigit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).enterHexDigit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).exitHexDigit(this);
		}
	}

	public final HexDigitContext hexDigit() throws RecognitionException {
		HexDigitContext _localctx = new HexDigitContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_hexDigit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(HEX_DIGIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DigitContext extends ParserRuleContext {
		public TerminalNode DIGIT() { return getToken(m2pim4Parser.DIGIT, 0); }
		public DigitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_digit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).enterDigit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).exitDigit(this);
		}
	}

	public final DigitContext digit() throws RecognitionException {
		DigitContext _localctx = new DigitContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_digit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(DIGIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OctalDigitContext extends ParserRuleContext {
		public TerminalNode OCTAL_DIGIT() { return getToken(m2pim4Parser.OCTAL_DIGIT, 0); }
		public OctalDigitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_octalDigit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).enterOctalDigit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).exitOctalDigit(this);
		}
	}

	public final OctalDigitContext octalDigit() throws RecognitionException {
		OctalDigitContext _localctx = new OctalDigitContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_octalDigit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(OCTAL_DIGIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(m2pim4Parser.STRING, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof m2pim4Listener ) ((m2pim4Listener)listener).exitString(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
